Checking in even though there's no real change.

--- a/vue-gui/tslab-vue/tsconfig.json
+++ b/vue-gui/tslab-vue/tsconfig.json
@@ -1,4 +1,4 @@
-{  
+{
   "files": [],
   "references": [
     {
@@ -12,6 +12,6 @@
     }
   ],
   "compilerOptions": {
-    "sourceMap": true
+    "sourceMap": true,
   }
 }
