--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "typescript-json-serializer": "^6.0.1"
+    "typescript": "^5.5.3"
   }
 }
