Added the decorator stuff to the tsconfig.json in the vue dir. Got the logFuel decorator to work again.

--- a/vue-gui/tslab-vue/tsconfig.json
+++ b/vue-gui/tslab-vue/tsconfig.json
@@ -13,5 +13,7 @@
   ],
   "compilerOptions": {
     "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
