--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "strict": true
   }
 }
