--- a/vue-gui/tslab-vue/tsconfig.json
+++ b/vue-gui/tslab-vue/tsconfig.json
@@ -14,6 +14,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "strict": true
   }
 }
