Decided to go back to ts-jackson.

--- a/vue-gui/tslab-vue/package.json
+++ b/vue-gui/tslab-vue/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "serve": "^14.2.3",
+    "ts-jackson": "^1.7.0",
     "ts-serializer": "^2.2.6",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
