--- a/vue-gui/tslab-vue/package.json
+++ b/vue-gui/tslab-vue/package.json
@@ -2,7 +2,7 @@
   "name": "tslab-vue",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
