Deleted and reinstalled node_modules in attempt to get fs and process packages recognized by VSCode and the build script.

--- a/vue-gui/tslab-vue/tsconfig.json
+++ b/vue-gui/tslab-vue/tsconfig.json
@@ -12,6 +12,7 @@
     }
   ],
   "compilerOptions": {
+    "types": ["node"],
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
