--- a/vue-gui/tslab-vue/tsconfig.app.json
+++ b/vue-gui/tslab-vue/tsconfig.app.json
@@ -3,6 +3,7 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../../PixelReactor.ts", "../../Gson.ts", "../../Util.ts"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "types": ["node"],
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
