The movie.ts script now creates and updates a PG with the newDifferencePixels array from the frames. Also added 'target: 'ES2018' to tsconfig.json to solve a problem with my LocationSet class.

--- a/vue-gui/tslab-vue/tsconfig.json
+++ b/vue-gui/tslab-vue/tsconfig.json
@@ -13,6 +13,7 @@
   ],
   "compilerOptions": {
     "types": ["node"],
+    "target": "ES2018",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
