--- a/vue-gui/tslab-vue/tsconfig.app.json
+++ b/vue-gui/tslab-vue/tsconfig.app.json
@@ -6,7 +6,8 @@
     "types": ["node"],
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "target": "ES2018",
+    "sourceMap": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
