--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,13 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../../PixelReactor.ts", "../../Gson.ts", "../../Util.ts"],
+  "extends": "./node_modules/@vue/tsconfig/tsconfig.dom.json",
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "./PixelReactor.ts",
+    "./Gson.ts",
+    "./Util.ts"
+  ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "types": ["node"],
