--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
+    "pngjs": "^7.0.0",
     "serve": "^14.2.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
