--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     }
   ],
   "compilerOptions": {
+    "allowJs": true,
     "types": ["node"],
     "target": "ES2018",
     "sourceMap": true,
