--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/pngjs": "^6.0.5",
     "pinia": "^2.2.6",
     "pngjs": "^7.0.0",
     "serve": "^14.2.4",
