--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,7 @@
     "./Util.ts",
     "src/scripts/pngjs-helper.js"
   ],
-  "exclude": ["src/**/__tests__/*"],
+  "exclude": ["src/**/__tests__/*", "**/deprecated/*"],
   "compilerOptions": {
     "allowJs": true,
     "types": ["node"],
